# helpers

./: README.md  bash-array-comparison.sh  bash-getopts.sh  bash-if-while-for-functions.sh  c-loops.c  c-structs.c  esp.c  powershell-examples.ps1  python-class-py3.py  python-csv-worker_01_combine.py  python-csv-worker_02_pandas_graph.py  python-files-folders.py  python-lists.py  python-os-commands.py  python-sqlite-02-writer.py  python-string-formatting.py  python-syslog.py  python-terminal-colors.py  python-threading-01-randomSleep.py  python-threading-03-daemon.py  python-threading-05-LIFOqueue.py  python-threading-06-priorityQueue.py  python-threading-07-fillQueue.py  python-threading-08-joinWithQueue.py  python-threading-09-executorBasic.py  python-threading-10-fillAndConsumeFromQueue.py  python-threading-11-multipleQueues.py  python-threading-12-processFiles.py  python-web-requests.py  python-wifi-sniffing.py  snort-helper.sh  splunk-analyst-annotation-maker-dashboard.txt  splunk-analyst-annotation-viewer-dashboard  splunk-byte-and-packet-summary-dashboard.txt  splunk-dashboard-example-features.txt  splunk-host-last-seen-dashboard.txt  terminator.desktop
python/: .env  .gitignore  README.md  config.ini  data.json  data.ndjson  data.toml  pyproject.toml  python-abc-dataclasses.py  python-aiohttp-1_fast.py  python-aiohttp-2_faster.py  python-aiohttp-3_fastest.py  python-argparse-2.py  python-argparse.py  python-args-kwargs.py  python-class-py2.py  python-class-py3_2.py  python-collections-deque.py  python-configparser-read.py  python-csv-worker_01_combine.py  (+73 more)
(+135 files in other folders)
