[project]
name = "python-helpers"
version = "0.1.0"
description = "Helper scripts for various Python use cases."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "python-whois>=0.9.6",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "selenium-wire>=5.1.0",
    "whoisdomain>=1.20260106.1",
    "whoisit>=4.0.3",
]
